fixed landing page on mobile

--- a/src/templates/Landing.css
+++ b/src/templates/Landing.css
@@ -173,7 +173,8 @@ body {
 
 @media (max-width: 480px) {
   .landing-container {
-    padding: 1rem;
+    margin-top: 5rem;
+    padding: 0rem;
   }
 
   .landing-container h1 {
